@@ -3,7 +3,7 @@
 "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
   <!ENTITY app "<application>Genius Mathematics Tool</application>">
   <!ENTITY appname "Genius">
-  <!ENTITY appversion "1.0.2">
+  <!ENTITY appversion "1.0.3">
   <!ENTITY manrevision "0.2.2">
   <!ENTITY date "February 2008">
 
@@ -28,7 +28,7 @@
     <title>&appname; Manual</title>       
 
     <copyright>
-      <year>1997-2007</year>
+      <year>1997-2008</year>
       <holder>Ji&#345;&iacute; (George) Lebl</holder>
     </copyright>
     <copyright>
