@@ -1,10 +1,13 @@
 Changes to 1.0.3
 
-* Add IsMersennePrime, MersennePrimeExponents
+Syntax and semantical changes are marked with CHANGE:
+
+* Add IsMersennePrime, MersennePrimeExponents, IsDefined, undefine
 * QuadraticFormula built in and more numerically stable
 * CHANGE: It's Fibonacci in correct spelling, short name is still fib
 * Calling internal functions is now slightly faster
 * Fix some memory leaks
+* Translations (FIXME)
 
 Changes to 1.0.2
 
