@@ -1,3 +1,15 @@
+Sun Feb 24 15:25:45 2008  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/dict.c, src/funclib.c: Add IsDefined and undefine.  Implement
+	  d_delete.  protect and unprotect now work with matrices of
+	  identifiers.
+
+	* src/geniustests.txt: add tests
+
+	* help/C/*.xml: update docs
+
+	* TODO: problems with subst lists can lead to crash, document this
+
 Fri Feb 22 02:44:23 2008  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/calc.c, src/mpwrap.c: avoid warning
